--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,13 @@
 #markdown: redcarpet
 markdown: kramdown
 kramdown:
-  use_coderay: true
+    use_coderay: true
+    coderay:
+        coderay_wrap: div
+        coderay_line_numbers: inline
+        coderay_line_numbers_start: 1
+        coderay_tab_width: 4
+        coderay_bold_every: 10
+        coderay_css: style
+
+pygments: false
