--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,4 @@ markdown: kramdown
 kramdown:
     use_coderay: true
 coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
+    coderay_css: class
