--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 #markdown: redcarpet
 markdown: kramdown
 kramdown:
-    use_coderay: true
+    use_coderay: false
 coderay:
     coderay_css: class
