--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,2 @@
-#markdown: maruku
-#markdown: redcarpet
 markdown: kramdown
-kramdown:
-    use_coderay: false
-coderay:
-    coderay_css: class
+pygments: true
